Trans_PY/log.txt
nohup: 忽略输入
  File "Train_.py", line 221
    relation_tmp[fb_r[i]] /=  norm(relation_tmp[fb_r[i]])
                                                        ^
IndentationError: unindent does not match any outer indentation level
